Add simple color picker, some bug fixed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
         </button>
       </div>
     </div>
+    <div class="color_picker">
+      <div class="color_block black"></div>
+      <div class="color_block silver"></div>
+      <div class="color_block white"></div>
+      <div class="color_block fuchsia"></div>
+      <div class="color_block purple"></div>
+      <div class="color_block red"></div>
+      <div class="color_block maroon"></div>
+      <div class="color_block yellow"></div>
+      <div class="color_block gold"></div>
+      <div class="color_block olivedrab"></div>
+      <div class="color_block lime"></div>
+      <div class="color_block springgreen"></div>
+      <div class="color_block green"></div>
+      <div class="color_block aqua"></div>
+      <div class="color_block blue"></div>
+      <div class="color_block navy"></div>
+    </div>
     <div class="grid_wrap">
       <div id="_grid"></div>
     </div>
