Add colors, fix some issues

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     <div class="wrapper">
       <h1>PIXEL DRAW</h1>
       <p>
-        Input <b>GRID</b> size(max 2 digits):
+        <b>GRID</b> height in cells [ &lt; 64]:
         <input id="grid_height" type="text" />
       </p>
       <p>
-        Input <b>GRID CELL</b> size in pixels(from 8 to 32):
+        <b>GRID</b> width in cells [ &lt; 128]:
+        <input id="grid_width" type="text" />
+      </p>
+      <p>
+        <b>GRID CELL</b> size in pixels [12 &mdash; 54]:
         <input id="cell_size" type="text" />
       </p>
       <div class="draw_button_wrap">
@@ -47,6 +51,14 @@
       <div class="color_block aqua"></div>
       <div class="color_block blue"></div>
       <div class="color_block navy"></div>
+      <div class="color_block NavajoWhite"></div>
+      <div class="color_block Crimson"></div>
+      <div class="color_block Gray"></div>
+      <div class="color_block DarkSlateGray"></div>
+      <div class="color_block AntiqueWhite"></div>
+      <div class="color_block Teal"></div>
+      <div class="color_block MediumSlateBlue"></div>
+      <div class="color_block OrangeRed"></div>
     </div>
     <div class="grid_wrap">
       <div id="_grid"></div>
