--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="wrapper">
       <h1>PIXEL DRAW</h1>
       <p>
-        <b>GRID</b> height in cells [ &lt; 64]:
+        <b>GRID</b> height in cells [1 &mdash; 64]:
         <input id="grid_height" type="text" />
       </p>
       <p>
-        <b>GRID</b> width in cells [ &lt; 128]:
+        <b>GRID</b> width in cells [1 &mdash; 96]:
         <input id="grid_width" type="text" />
       </p>
       <p>
