Bugfix + add grid visibility

--- a/index.html
+++ b/index.html
@@ -67,15 +67,12 @@
         </div>
       </div>
       <div class="tools">
-        <div id="brush">
-          <!-- <p>brush</p> -->
-        </div>
-        <div id="filling">
-          <!-- <p>filling</p> -->
-        </div>
-        <div id="pipette">
-          <!-- <p>pipette</p> -->
-        </div>
+        <div id="brush"></div>
+        <div id="filling"></div>
+        <div id="pipette"></div>
+        <button id="switch_grid_vis">
+          <p>Grid visibility</p>
+        </button>
       </div>
     </div>
     <div id="grid_wrap">
