--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="create_button_wrap">
         <button class="create_button" id="create_grid">
-          <p>DRAW GRID</p>
+          <p>CREATE NEW GRID</p>
         </button>
       </div>
       <div class="palette">
@@ -65,9 +65,9 @@
         <div id="picker_wrap">
           <input type="color" name="Any color" id="any_color_picker" />
         </div>
-        <div id="brush"></div>
-        <div id="filling"></div>
-        <div id="pipette"></div>
+        <div id="brush_icon"></div>
+        <div id="filling_icon"></div>
+        <div id="pipette_icon"></div>
         <button id="switch_grid_vis">
           <p>Grid visibility</p>
         </button>
