add save load style, add clear history, bugfix

--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
         <p class="param_input"><b>GRID CELL</b> size in pixels</p>
         <input id="cell_size" type="text" placeholder=" 6 &mdash; 64" />
       </div>
-      <div id="save_button">
-        <p>S  A  V  E</p>
-      </div>
-      <div id="load_button">
-        <p>L  O  A  D</p>
-      </div>
-      <div class="create_button_wrap">
-        <button class="create_button" id="create_grid">
-          <p>CREATE NEW GRID</p>
+      <div class="storage_manage">
+        <button id="save_button">
+          <p>SAVE</p>
+        </button>
+        <button id="load_button">
+          <p>LOAD</p>
+        </button>
+        <button id="clear_history">
+          <p>CLEAR<br>HISTORY</p>
         </button>
       </div>
+      <button id="create_grid">
+        <p>CREATE NEW GRID</p>
+      </button>
       <div class="palette">
         <div class="color_block" style="background-color: #ffffff"></div>
         <div class="color_block" style="background-color: #c0c0c0"></div>
