Code style change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>LOAD</p>
         </button>
         <button id="clear_history">
-          <p>CLEAR<br>HISTORY</p>
+          <p>CLEAR<br />HISTORY</p>
         </button>
       </div>
       <button id="create_grid">
