Ico logo new colors meta tags

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="Content-Type" charset="UTF-8"/>
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="assets/style.css" />
+    <meta property="og:title" content="Pixel Draw">
+    <meta property="og:site_name" content="Pixel Draw">
+    <meta property="og:url" content="pixeldraw.ru">
+    <meta property="og:description" content="Нарисуй что угодно, даже если не умеешь рисовать">
+    <meta property="og:image" content="assets/images/Pixel_Eye.png">
+    <title>Pixel Draw</title>
+    <link rel="shortcut icon" href="assets/images/Pixel_Eye.ico">
+    <link rel="stylesheet" href="assets/style.css"/>
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
+
   </head>
 
   <body>
@@ -63,6 +71,14 @@
         <div class="color_block" style="background-color: #000080"></div>
         <div class="color_block" style="background-color: #800080"></div>
         <div class="color_block" style="background-color: #ff00ff"></div>
+        <div class="color_block" style="background-color: #3CB371"></div>
+        <div class="color_block" style="background-color: #FF6347"></div>
+        <div class="color_block" style="background-color: #FF8C00"></div>
+        <div class="color_block" style="background-color: #E0FFFF"></div>
+        <div class="color_block" style="background-color: #9966CC"></div>
+        <div class="color_block" style="background-color: #CED23A"></div>
+        <div class="color_block" style="background-color: #34C924"></div>
+        <div class="color_block" style="background-color: #5E2129"></div>
       </div>
       <div class="tools">
         <div id="picker_wrap">
