--- a/index.html
+++ b/index.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta http-equiv="Content-Type" charset="UTF-8"/>
+    <meta http-equiv="Content-Type" charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta property="og:title" content="Pixel Draw">
-    <meta property="og:site_name" content="Pixel Draw">
-    <meta property="og:url" content="pixeldraw.ru">
-    <meta property="og:description" content="Нарисуй что угодно, даже если не умеешь рисовать">
-    <meta property="og:image" content="assets/images/Pixel_Eye.png">
+    <meta property="og:title" content="Pixel Draw" />
+    <meta property="og:site_name" content="Pixel Draw" />
+    <meta property="og:url" content="pixeldraw.ru" />
+    <meta
+      property="og:description"
+      content="Нарисуй что угодно, даже если не умеешь рисовать"
+    />
+    <meta property="og:image" content="assets/images/Pixel_Eye.png" />
     <title>Pixel Draw</title>
-    <link rel="shortcut icon" href="assets/images/Pixel_Eye.ico">
-    <link rel="stylesheet" href="assets/style.css"/>
+    <link rel="shortcut icon" href="assets/images/Pixel_Eye.ico" />
+    <link rel="stylesheet" href="assets/style.css" />
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-
   </head>
 
   <body>
     <div class="wrapper">
       <h1>PIXEL DRAW</h1>
+      <div class="storage_manage">
+        <div class="save_wrap">
+          <button id="save_button">
+            <p>SAVE</p>
+          </button>
+          <input type="text" id="pic_name" placeholder="Input picture name" />
+          <div id="accept_save">
+            <p>ACCEPT</p>
+          </div>
+        </div>
+        <button id="load_button">
+          <p>LOAD</p>
+        </button>
+        <button id="clear_history">
+          <p>CLEAR<br />HISTORY</p>
+        </button>
+      </div>
       <div class="params">
         <p class="param_input"><b>GRID</b> height in cells</p>
         <input id="grid_height" type="text" placeholder=" 1 &mdash; 192" />
@@ -32,44 +51,33 @@
         <p class="param_input"><b>GRID CELL</b> size in pixels</p>
         <input id="cell_size" type="text" placeholder=" 6 &mdash; 64" />
       </div>
-      <div class="storage_manage">
-        <button id="save_button">
-          <p>SAVE</p>
-        </button>
-        <button id="load_button">
-          <p>LOAD</p>
-        </button>
-        <button id="clear_history">
-          <p>CLEAR<br />HISTORY</p>
-        </button>
-      </div>
       <button id="create_grid">
         <p>CREATE NEW GRID</p>
       </button>
       <div class="palette">
         <div class="color_block" style="background-color: #ffdead"></div>
         <div class="color_block" style="background-color: #faebd7"></div>
-        <div class="color_block" style="background-color: #E0FFFF"></div>
+        <div class="color_block" style="background-color: #e0ffff"></div>
         <div class="color_block" style="background-color: #ffffff"></div>
         <div class="color_block" style="background-color: #c0c0c0"></div>
         <div class="color_block" style="background-color: #808080"></div>
         <div class="color_block" style="background-color: #000000"></div>
-        <div class="color_block" style="background-color: #5E2129"></div>
+        <div class="color_block" style="background-color: #5e2129"></div>
         <div class="color_block" style="background-color: #800000"></div>
         <div class="color_block" style="background-color: #dc143c"></div>
         <div class="color_block" style="background-color: #ff0000"></div>
         <div class="color_block" style="background-color: #ff4500"></div>
-        <div class="color_block" style="background-color: #FF6347"></div>
-        <div class="color_block" style="background-color: #FF8C00"></div>
+        <div class="color_block" style="background-color: #ff6347"></div>
+        <div class="color_block" style="background-color: #ff8c00"></div>
         <div class="color_block" style="background-color: #ffd700"></div>
         <div class="color_block" style="background-color: #ffff00"></div>
-        <div class="color_block" style="background-color: #CED23A"></div>
+        <div class="color_block" style="background-color: #ced23a"></div>
         <div class="color_block" style="background-color: #6b8e23"></div>
         <div class="color_block" style="background-color: #8fbc8f"></div>
-        <div class="color_block" style="background-color: #3CB371"></div>
+        <div class="color_block" style="background-color: #3cb371"></div>
         <div class="color_block" style="background-color: #008080"></div>
         <div class="color_block" style="background-color: #008000"></div>
-        <div class="color_block" style="background-color: #34C924"></div>
+        <div class="color_block" style="background-color: #34c924"></div>
         <div class="color_block" style="background-color: #00ff00"></div>
         <div class="color_block" style="background-color: #00ff7f"></div>
         <div class="color_block" style="background-color: #00ffff"></div>
@@ -77,7 +85,7 @@
         <div class="color_block" style="background-color: #000080"></div>
         <div class="color_block" style="background-color: #800080"></div>
         <div class="color_block" style="background-color: #7b68ee"></div>
-        <div class="color_block" style="background-color: #9966CC"></div>
+        <div class="color_block" style="background-color: #9966cc"></div>
         <div class="color_block" style="background-color: #ff00ff"></div>
       </div>
       <div class="tools">
